// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsightsCloudSync render 1`] = `
<PageLayout
  beforeToolbarComponent={<InsightsHeader />}
  header="Red Hat Insights"
  onSearch={[Function]}
  searchProps={
    Object {
      "autocomplete": Object {
        "id": "searchBar",
        "searchQuery": "",
        "url": "/insights_cloud/hits/auto_complete_search",
        "useKeyShortcuts": true,
      },
      "bookmarks": Object {
        "canCreateBookmarks": true,
        "documentationUrl": "4.1.5Searching",
        "url": "/api/bookmarks",
      },
      "controller": "/foreman_rh_cloud/insights_cloud",
    }
  }
  searchQuery=""
  searchable={true}
  toolbarButtons={
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      disabled={false}
      onClick={[Function]}
    >
      Sync now
    </Button>
  }
>
  <p>
    Insights Table will be here
  </p>
</PageLayout>
`;

exports[`InsightsCloudSync render error 1`] = `
<PageLayout
  header="Red Hat Insights ERROR"
  searchable={false}
>
  <ErrorEmptyState />
</PageLayout>
`;

exports[`InsightsCloudSync render no token 1`] = `
<PageLayout
  header="Red Hat Insights"
  searchable={false}
>
  <NoTokenEmptyState />
</PageLayout>
`;
